[package]
authors = ['Fennel Labs <https://github.com/fennelLabs>']
description = 'FRAME pallet providing Fennel signaling logic.'
edition = '2021'
homepage = 'https://fennellabs.com'
license = 'Unlicense'
name = 'pallet-signal'
repository = 'https://github.com/fennelLabs/fennel-protocol/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ['derive', 'max-encoded-len'], package = 'parity-scale-codec', version = "3.1" }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "polkadot-v0.9.43" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-uniques = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[dev-dependencies]
log = { version = "0.4", default-features = false, features = ['release_max_level_warn'] }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-support/runtime-benchmarks', 'frame-system/runtime-benchmarks']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
]
try-runtime = ['frame-support/try-runtime', 'frame-system/try-runtime']
