[package]
authors = ['Fennel Labs <https://github.com/fennelLabs>']
description = 'FRAME pallet providing Web of Trust functionality.'
edition = '2021'
homepage = 'https://fennellabs.com'
license = 'Unlicense'
name = 'pallet-trust'
repository = 'https://github.com/fennelLabs/fennel-protocol/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
codec = { default-features = false, features = ['derive', 'max-encoded-len'], package = 'parity-scale-codec', version = '3.1' }
frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = "polkadot-v1.0.0" }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v1.0.0" }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking', 'frame-support/runtime-benchmarks', 'frame-system/runtime-benchmarks']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'scale-info/std',
    'sp-runtime/std',
]
try-runtime = ['frame-support/try-runtime', 'frame-system/try-runtime']
